# oar-app

./: .gitmodules  .metadata  Cargo.toml  README.md  err  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/elements/: text_input.dart
lib/utils/: const.dart
macos/Runner.xcodeproj/: project.pbxproj
messages/: common.proto  llm.proto
native/hub/: Cargo.toml
native/hub/src/: lib.rs  llm.rs
native/hub/src/files/: pdf_reader.rs
native/llama-cpp-2/src/: model.rs
native/llama-cpp-2/src/context/: sample.rs
native/llama-cpp-sys-2/: Cargo.toml  build.rs
native/llm/: Cargo.toml
native/llm-cpp/: Cargo.toml  build.rs
native/llm/src/: context.rs  grammar.rs  lib.rs  llama_backend.rs  llama_batch.rs  model.rs  timing.rs  token.rs  token_type.rs
native/llm/src/context/: kv_cache.rs  params.rs  sample.rs  session.rs
native/llm/src/context/sample/: sampler.rs
native/llm/src/grammar/: tests.rs
native/llm/src/model/: params.rs
native/llm/src/model/params/: kv_overrides.rs
native/llm/src/token/: data.rs  data_array.rs
windows/flutter/: generated_plugins.cmake
