[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.8.0"
prost = "0.12.3"
wasm-bindgen = "0.2.91"
tokio_with_wasm = "0.4.3"
pdf = "0.9.0"
build-target = { workspace = true }
llm = { path = "../llm", version = "0.1.52" }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }
#lancedb = "0.5.0"