[package]
name = "llm"
description = "llama.cpp bindings for Rust"
version = "0.1.52"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
llm-cpp = { path = "../llm-cpp", version = "0.1.52" }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
cublas = ["llm-cpp/cublas"]
metal = ["llm-cpp/metal"]
sampler = []

[target.'cfg(all(target_os = "macos", any(target_arch = "aarch64", target_arch = "arm64")))'.dependencies]  
llm-cpp = { path = "../llm-cpp", features=["metal"], version = "0.1.48" }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["sampler"]